tests/paczka1/fuzzy1/92922344.err
Error in line 3: cuWvb A718 81,0
Error in line 8: cuWvb S909 51,7
Error in line 2: Q08 A718 55,3
Error in line 27: S909 S651 17,6
Error in line 30: vCEahI78Rnz S651 91,4
